# metsi-simlib-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test_all.sh  vcpkg.json
.github/workflows/: cmake.yml
metsi-app/: BoostTestHelpers.cmake  CMakeLists.txt
metsi-app/doc/: about_yaml.drawio  metsi_control_yaml_guide.md
metsi-app/resources/: control.yaml
metsi-app/src/: app_io.cpp  app_io.hpp  domain_functions.cpp  domain_functions.hpp  dylib.hpp  file_io.cpp  file_io.hpp  itertest.cpp  main.cpp  motti_wrapper.cpp  motti_wrapper.hpp  overlaid_object.hpp  sim_configuration.hpp  sim_events.cpp  sim_events.hpp  state_model.cpp  state_model.hpp
metsi-app/tests/: app_io_test.cpp  csv_parser_test.cpp  domain_functions_test.cpp  file_io_test.cpp  lua_test.cpp  motti_wrapper_test.cpp  sim_configuration_test.cpp  sim_events_test.cpp  simulation_run_test.cpp  state_model_test.cpp  test_utils.hpp  yaml_cpp_test.cpp
metsi-app/tests/resources/: forest_data.csv  test.yaml
metsi-app/tests/test_resources/: forest_data_multiple.csv  simulation_events_non_nested.yaml  test.csv
metsi-simlib/: BoostTestHelpers.cmake  CMakeLists.txt
metsi-simlib/include/metsi-simlib/: core_types.hpp  event_graph.hpp
metsi-simlib/src/: framework_util.cpp
metsi-simlib/tests/: class_typed_state_test.cpp  event_graph_test.cpp  framework_util_test.cpp
src/: CMakeLists.txt  main.cpp
src/add/: CMakeLists.txt  add.cpp
src/metsi/: CMakeLists.txt  file_io.hpp  main.cpp  sim_configuration.cpp  sim_configuration.hpp
src/metsi-app/: CMakeLists.txt  sim_configuration.hpp
src/metsi-app/resources/: control.yaml
src/metsi-app/src/: app_io.hpp  file_io.cpp  file_io.hpp  main.cpp  overlaid_object.hpp  sim_events.cpp  state_model.cpp  state_model.hpp
src/metsi-app/tests/: csv_parser_test.cpp  lua_test.cpp  overlaid_object_test.cpp  sim_configuration_test.cpp  simulation_run_test.cpp
src/metsi-app/tests/resources/: forest_data.csv
src/metsi-simlib/: CMakeLists.txt  event_graph.hpp
src/metsi-simlib/include/metsi-simlib/: framework_util.hpp
src/metsi-simlib/tests/: branching_generators_test.cpp
src/sim/: CMakeLists.txt  branching_generators.hpp  core_types.hpp  event_graph.hpp  framework_util.cpp  framework_util.hpp  operation_util.cpp  operation_util.hpp
tests/: CMakeLists.txt  branching_generators.cpp  class_type_operation_test.cpp  event_graph.cpp  lua_tester.cpp  operation_util.cpp  test.lua  test.yaml  test_suite.cpp  yaml_tester.cpp
tests/app/: csv_parser_test.cpp  event_aliasing.yaml  file_io_test.cpp  full_simulation_test.yaml  lua_test.cpp  operation_aliasing.yaml  sim_configuration.cpp  sim_configuration_test.cpp  simulation_events_nested.yaml  test_control.yaml  yaml_cpp_test.cpp
tests/app/resources/: test.lua
tests/sim/: branching_generators_test.cpp  class_type_operation_test.cpp  class_typed_state_test.cpp  event_graph.cpp  event_graph_test.cpp  framework_util_test.cpp  operation_util.cpp
